--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,8 @@ import Navbar from "../common/ui/Navbar.astro";
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
-		<title>Astro Basics</title>
+		<link rel="shortcut icon" href="/image-logo.svg" type="image/x-icon">
+		<title>Veltrix</title>
 	</head>
 	<body class="font-[Inter] bg-white">
 		<Navbar />
