--- a/src/common/views/AreYouReady.astro
+++ b/src/common/views/AreYouReady.astro
@@ -10,10 +10,18 @@
         </p>
 
         <a
-            class="bg-sky-600 hover:bg-sky-700 text-white font-semibold py-3 px-6 mt-6 inline-block rounded-lg shadow-md"
+            class="bg-sky-600 hover:bg-sky-700 text-white font-semibold py-3 px-6 mt-6 inline-block w-full"
             href="https://wa.me/573147875028?text=Hola,%20quiero%20más%20información"
         >
             Contáctanos
         </a>
     </div>
 </section>
+<style>
+    @media (min-width: 768px) {
+        .responsive-container {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+    }
+</style>
