--- a/src/home/components/Technologies.astro
+++ b/src/home/components/Technologies.astro
@@ -22,17 +22,19 @@ const technologies = [
 ---
 
 <section>
-    <ul class="flex items-center gap-10 justify-center sm:justify-start">
+    <ul class="flex flex-wrap items-center gap-6 justify-center sm:justify-start">
         {
             technologies.map((tech) => (
-                <a href={tech.url} target="_blank">
-                    <Icon
-                        name={tech.path}
-                        width={50}
-                        height={50}
-                        class="min-w-10 hover:fill-sky-950"
-                    />
-                </a>
+                <li>
+                    <a href={tech.url} target="_blank" class="block">
+                        <Icon
+                            name={tech.path}
+                            width={50}
+                            height={50}
+                            class="min-w-10 hover:fill-sky-950"
+                        />
+                    </a>
+                </li>
             ))
         }
     </ul>
